Use a skipper for the auth, so tokens aren't needed for swagger docs.
